--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
         </nav>
       </div>
     </header>
+
+    <main class="intro-bg">
+      <div class="intro">
+        <div class="intro-conteudo">
+          <h1>Biciletas feitas sob medida<span>.</span></h1>
+
+          <p>
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
+            para você. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a href="./bicicletas.html">Escolha a sua</a>
+        </div>
+
+        <div>
+          <img
+            src="./img/fotos/introducao.jpg"
+            alt="Bicicleta elétrica preta."
+          />
+        </div>
+      </div>
+    </main>
   </body>
 </html>
