--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </a>
 
         <nav aria-label="primaria">
-          <ul class="header-menu">
+          <ul class="header-menu font-1-m cor-0">
             <li><a href="./bicicletas.html">Bicicletas</a></li>
             <li><a href="./seguros.html">Seguros</a></li>
             <li><a href="./contato.html">Contato</a></li>
@@ -38,13 +38,15 @@
     <main class="intro-bg">
       <div class="intro">
         <div class="intro-conteudo">
-          <h1>Biciletas feitas sob medida<span>.</span></h1>
+          <h class="font-1-xxl cor-0">
+            Bicicletas feitas sob medida<span class="cor-p1">.</span>
+          </h>
 
-          <p>
+          <p class="font-2-l cor-5">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a href="./bicicletas.html">Escolha a sua</a>
+          <a class="botao" href="./bicicletas.html">Escolha a sua</a>
         </div>
 
         <div>
