--- a/index.html
+++ b/index.html
@@ -212,5 +212,50 @@
         </div>
       </div>
     </article>
+
+    <footer class="footer-bg">
+      <div class="footer container">
+        <img src="./img/bikcraft.svg" alt="Bikcraft" />
+
+        <div class="footer-contact">
+          <h3 class="font-2-l-b cor-0">Contato</h3>
+          <ul class="font-2-m cor-5">
+            <li><a href="tel:+5521999999999"></a>+55 21 99999-9999</li>
+            <li>
+              <a href="mailto:contato@bikcraft.com"></a>contato@bikcraft.com
+            </li>
+            <li>Rua Por Aqui, 21 - Recife</li>
+            <li>Recife - PE</li>
+          </ul>
+
+          <div class="footer-socials">
+            <a href="./">
+              <img src="./img/redes/instagram.svg" alt="instagram" />
+            </a>
+            <a href="./"
+              ><img src="./img/redes/facebook.svg" alt="facebook"
+            /></a>
+            <a href="./"><img src="./img/redes/youtube.svg" alt="youtube" /></a>
+          </div>
+        </div>
+
+        <div class="footer-info">
+          <h3 class="font-2-l-b cor-0">Informações</h3>
+
+          <nav>
+            <ul class="font-1-m cor-5">
+              <li><a href="./bicicletas.html">Bicicletas</a></li>
+              <li><a href="./seguros.html">Seguros</a></li>
+              <li><a href="./contato.html">Contato</a></li>
+              <li><a href="./termos.html">Termos e Condições</a></li>
+            </ul>
+          </nav>
+        </div>
+
+        <p class="footer-copy font-2-m cor-6">
+          Bikcraft © Alguns direitos reservados.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
