--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head lang="pt-br">
+<html lang="pt-br">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Magic | Bikcraft</title>
     <meta name="description" content="Magic" />
-    <link rel="stylesheet" href="../css/style.css" />
+
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="../css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +15,9 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body id="bike">
@@ -42,9 +47,9 @@
 
       <div class="bike container">
         <div class="bike-img">
-          <img src="../img/bicicleta/nimbus2.jpg" alt="" />
-          <img src="../img/bicicleta/nimbus1.jpg" alt="" />
-          <img src="../img/bicicleta/nimbus3.jpg" alt="" />
+          <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta 1" />
+          <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta 2" />
+          <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta 3" />
         </div>
 
         <div class="bike-content">
@@ -55,7 +60,11 @@
           </p>
 
           <div class="bike-buy">
-            <a class="botao" href="../orcamento.html">Comprar Agora</a>
+            <a
+              class="botao"
+              href="../orcamento.html?type=bikcraft&product=magic"
+              >Comprar Agora</a
+            >
 
             <span class="font-1-xs cor-6">
               <img src="../img/icones/entrega.svg" alt="" /> entrega em 5 dias
@@ -207,5 +216,6 @@
         </p>
       </div>
     </footer>
+    <script src="../js/script.js"></script>
   </body>
 </html>
