--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-  <head lang="pt-br">
+<html lang="pt-br">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikcraft - Bicicletas Elétricas</title>
@@ -8,8 +8,10 @@
       name="description"
       content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft."
     />
-    <link rel="preload" href="./css/style.css" as="style" />
-    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
   </head>
 
   <body>
@@ -39,18 +45,20 @@
     <main class="intro-bg">
       <div class="intro container">
         <div class="intro-conteudo">
-          <h class="font-1-xxl cor-0">
+          <h1 class="font-1-xxl cor-0 fadeInDown" data-anime="200">
             Bicicletas feitas sob medida<span class="cor-p1">.</span>
-          </h>
+          </h1>
 
-          <p class="font-2-l cor-5">
+          <p class="font-2-l cor-5 fadeInDown" data-anime="400">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida
             para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+          <a class="botao fadeInDown" data-anime="600" href="./bicicletas.html"
+            >Escolha a sua</a
+          >
         </div>
 
-        <picture>
+        <picture data-anime="800" class="fadeInDown">
           <source
             media="(max-width: 800px)"
             srcset="./img/bicicletas/nimbus.jpg"
@@ -296,5 +304,7 @@
         </p>
       </div>
     </footer>
+    <script src="./js/plugins/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
